reservations export to Excel

--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -26,6 +26,9 @@
     </div>
 
     <div class="main-card mb-3 card">
+      <a href="{{ path('export_reservations_excel') }}" class="btn btn-primary">
+        📥 Exporter en Excel
+      </a>
       <div class="card-header">
         Réservations enregistrées
       </div>
